
[metadata]
name = dacman-csv
version = 0.1.0a
author = Ludovico Bianchi
author-email = lbianchi@lbl.gov
home-page = https://github.com/dgoshal-lbl/dac-man
description = Find difference between CSV files

[options.entry_points]
console_scripts = 
    dacman-csv = dacman_csv:main

[options]
py_modules = dacman_csv
# for the moment there are no packages, so we can leave this off
# packages = find:


python_requires = >= 3.6
setup_requires =
    # TODO at some point verify this
    setuptools >=38.3.0

# installing the actual packages should be managed by conda
# via the environment.yml file

install_requires =
    pandas
    # TODO add Excel parser for pandas

test_suite = tests
tests_require = 
    pytest
    pytest-console-scripts

[options.extras_require]
tests = 
    pytest
    pytest-console-scripts
